--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser-dynamic": "~9.0.4",
     "@angular/router": "~9.0.4",
     "core-js": "^2.5.4",
+    "ng-zorro-antd": "^9.3.0",
     "rxjs": "~6.5.4",
-    "tslib": "^1.9.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
